--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.12.2",
     "swiper": "^11.0.5",
     "tsparticles": "^3.1.0"
