--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
+    "axios": "^1.6.5",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
