--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.3.2",
+    "dotenv-webpack": "^8.0.1",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
